cmake_minimum_required(VERSION 3.5.1)
project(Project_threadpool_server)

set( CMAKE_CXX_FLAGS "-std=c++11 -pthread" )
include_directories(./include)
add_definitions(-Wall -g )
set(SOURCE  ./src/class_server.cpp ./src/User.cpp )
# file(GLOB SOURCE "src/*.cpp")
add_executable(class_server ${SOURCE})
add_executable(client ./src/client.cpp)
